--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       <input type="submit" value="SEND MESSAGE">
                       <input type="reset" value="RESET">
                     </div>
-                    <div class="icons" data-aos="fade-left" data-aos-delay="700" data-aos-duration="700">
+                    <div class="icons">
                       <a href="https://twitter.com/jeremy_l8r" class="fa-brands fa-twitter"></a>
                       <a href="https://web.facebook.com/c0d3xxx" class="fa-brands fa-facebook"></a>
                       <a href="https://www.instagram.com/jeremy.l8r" class ="fa-brands fa-instagram"></a>
